после правок, проверила через валидатор

--- a/portfolio.html
+++ b/portfolio.html
@@ -14,8 +14,8 @@
     <link rel="stylesheet" href="./css/style.css"/>
 </head>
 <body>
- <!--Navigation-->
-        <header class="header">
+    <!--Navigation-->
+    <header class="header">
         <div class="container container-nav">
             <ul class="nav-list list">
                 <li class="nav-item"><a href="" class="logo-link"><span class="logo" lang="en">Web</span><span class="logo1"
@@ -26,22 +26,20 @@
             </ul>
             <ul class="contacts-list list">
                 <li class="contacts-item">
-                    <a class="contacts-link" href="mailto:info@devstudio.com"></a>
+                    <a class="contacts-link" href="mailto:info@devstudio.com">
                     <svg class="contacts-icon" width="16" height="10">
                         <use href="./images/icons.svg#icon-envelope"></use>
-                    </svg>
-                    info@example.com</a>
+                    </svg>info@example.com</a>
                 <li>
                 <li class="contacts-item">
-                    <a class="contacts-link" href="tel:+380991111111"></a>
+                    <a class="contacts-link" href="tel:+380991111111">
                     <svg class="contacts-icon" width="10" height="16">
                         <use href="./images/icons.svg#icon-smartphone"></use>
-                    </svg>
-                    +380991111111</a>
-                </li>
+                    </svg>+380991111111</a>
+                    </li>
             </ul>
         </div>
-        </header>
+    </header>
     <section class="portfolio">
             <div class="container container-portfolio">
             <h1 class="visually-hidden">Наши работы</h1>
@@ -118,7 +116,7 @@
                     </li>
                 </ul>
             </div>
-     </section>
+    </section>
     <!--Footer-->
     <footer class="footer">
         <div class="container container-footer">
