--- a/index.html
+++ b/index.html
@@ -25,29 +25,27 @@
                     </ul>
                     <ul class="contacts-list list">
                         <li class="contacts-item">
-                            <a class="contacts-link" href="mailto:info@devstudio.com"></a>
+                            <a class="contacts-link" href="mailto:info@devstudio.com">
                             <svg class="contacts-icon" width="16" height="10">
                                 <use href="./images/icons.svg#icon-envelope"></use>
-                            </svg>
-                            info@example.com</a>
+                            </svg>info@example.com</a>
                         <li>
                         <li class="contacts-item">
-                            <a class="contacts-link" href="tel:+380991111111"></a>
+                            <a class="contacts-link" href="tel:+380991111111">
                             <svg class="contacts-icon" width="10" height="16">
                                 <use href="./images/icons.svg#icon-smartphone"></use>
-                            </svg>
-                                +380991111111</a>
+                            </svg>+380991111111</a>
                         </li> 
                     </ul>
             </div>
         </header>
         <!--Hero-->
-        <div class="main">
+        <section class="main">
             <div class="container hero">
                 <h1 class="hero-title">Эффективные решения<br>для вашего бизнеса</h1>
                 <button type="button" class="hero-button">Заказать услугу</button>
             </div>
-        </div>
+        </section>
         <!--Description-->
         <section class="description">
             <div class="container container-description">
@@ -112,25 +110,25 @@
                             <ul class="team-social-list list">
                                 <li class="team-social-item">
                                     <a href="" class="team-social-link" >
-                                        <svg class="team-social-icon" width="20" hight="20">
+                                        <svg class="team-social-icon" width="20" height="20">
                                             <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-social-item">
-                                    <a href="" class="team-social-link"><svg class="team-social-icon" width="20" hight="20">
+                                    <a href="" class="team-social-link"><svg class="team-social-icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                                 </li>
                                 <li class="team-social-item">
-                                    <a href="" class="team-social-link"><svg class="team-social-icon" width="20" hight="20">
+                                    <a href="" class="team-social-link"><svg class="team-social-icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-facebook"></use>
                                     </svg>
                                 </a>
                                 </li>
                                 <li class="team-social-item">
-                                    <a href="" class="team-social-link"><svg class="team-social-icon" width="20" hight="20">
+                                    <a href="" class="team-social-link"><svg class="team-social-icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
@@ -144,25 +142,25 @@
                             <ul class="team-social-list list">
                                 <li class="team-social-item">
                                     <a href="" class="team-social-link">
-                                        <svg class="team-social-icon" width="20" hight="20">
+                                        <svg class="team-social-icon" width="20" height="20">
                                             <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-social-item">
-                                    <a href="" class="team-social-link"><svg class="team-social-icon" width="20" hight="20">
+                                    <a href="" class="team-social-link"><svg class="team-social-icon" width="20" height="20">
                                             <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-social-item">
-                                    <a href="" class="team-social-link"><svg class="team-social-icon" width="20" hight="20">
+                                    <a href="" class="team-social-link"><svg class="team-social-icon" width="20" height="20">
                                             <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-social-item">
-                                    <a href="" class="team-social-link"><svg class="team-social-icon" width="20" hight="20">
+                                    <a href="" class="team-social-link"><svg class="team-social-icon" width="20" height="20">
                                             <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
@@ -176,25 +174,25 @@
                             <ul class="team-social-list list">
                                 <li class="team-social-item">
                                     <a href="" class="team-social-link">
-                                        <svg class="team-social-icon" width="20" hight="20">
+                                        <svg class="team-social-icon" width="20" height="20">
                                             <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-social-item">
-                                    <a href="" class="team-social-link"><svg class="team-social-icon" width="20" hight="20">
+                                    <a href="" class="team-social-link"><svg class="team-social-icon" width="20" height="20">
                                             <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-social-item">
-                                    <a href="" class="team-social-link"><svg class="team-social-icon" width="20" hight="20">
+                                    <a href="" class="team-social-link"><svg class="team-social-icon" width="20" height="20">
                                             <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-social-item">
-                                    <a href="" class="team-social-link"><svg class="team-social-icon" width="20" hight="20">
+                                    <a href="" class="team-social-link"><svg class="team-social-icon" width="20" height="20">
                                             <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
@@ -208,25 +206,25 @@
                             <ul class="team-social-list list">
                                 <li class="team-social-item">
                                     <a href="" class="team-social-link">
-                                        <svg class="team-social-icon" width="20" hight="20">
+                                        <svg class="team-social-icon" width="20" height="20">
                                             <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-social-item">
-                                    <a href="" class="team-social-link"><svg class="team-social-icon" width="20" hight="20">
+                                    <a href="" class="team-social-link"><svg class="team-social-icon" width="20" height="20">
                                             <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-social-item">
-                                    <a href="" class="team-social-link"><svg class="team-social-icon" width="20" hight="20">
+                                    <a href="" class="team-social-link"><svg class="team-social-icon" width="20" height="20">
                                             <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-social-item">
-                                    <a href="" class="team-social-link"><svg class="team-social-icon" width="20" hight="20">
+                                    <a href="" class="team-social-link"><svg class="team-social-icon" width="20" height="20">
                                             <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
@@ -286,7 +284,6 @@
                 </ul>
             </div>
         </section>
-    </main>
         <!--Footer-->
     <footer class="footer">
         <div class="container container-footer">
